# mcp-wikidata

./: Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
src/: client.py  server.py
