[project]
name = "mcp-wikidata"
version = "0.1.0"
description = "MCP Wikidata Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.4.1",
    "httpx>=0.28.1",
]
authors = [{ name = "Jaebok Lee" }]

[project.optional-dependencies]
example = [
    "black>=25.1.0",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "langchain-core>=0.3.49",
    "langchain-mcp-adapters>=0.0.6",
]
